--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
-    "rust-analyzer.linkedProjects": [
-        "./apps/Cargo.toml",
-        "./methods/Cargo.toml",
-        "./methods/guest/Cargo.toml",
-    ],
-    "rust-analyzer.check.extraEnv": {
-        "RISC0_SKIP_BUILD": "1",
-    }
+  "rust-analyzer.linkedProjects": [
+    "./apps/Cargo.toml",
+    "./methods/Cargo.toml",
+    "./methods/guest/Cargo.toml"
+  ],
+  "rust-analyzer.check.extraEnv": {
+    "RISC0_SKIP_BUILD": "1"
+  },
+  "editor.formatOnSave": true,
+  "solidity.formatter": "forge",
+  "solidity.compileUsingRemoteVersion": "v0.8.24",
+  "solidity.defaultCompiler": "remote",
+  "solidity.compilerOptimization": 400,
+  "solidity-va.debug.parser.showExceptions": true
 }
