Simple team contract

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
     "RISC0_SKIP_BUILD": "1"
   },
   "editor.formatOnSave": true,
+  "solidity.remappings": [
+    "forge-std/=lib/forge-std/src/",
+    "@openzeppelin/=lib/openzeppelin-contracts/",
+    "risc0/=lib/risc0-ethereum/contracts/src/"
+  ],
   "solidity.formatter": "forge",
   "solidity.compileUsingRemoteVersion": "v0.8.24",
   "solidity.defaultCompiler": "remote",
