--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,32 @@ src = "contracts"
 out = "out"
 libs = ["lib"]
 test = "tests"
-ffi = true
-fs_permissions = [{ access = "read-write", path = "./"}]
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+solc-version = '0.8.26'
+evm_version = 'cancun'
+optimizer_runs = 400
+via_ir = true
+
+verbosity = 3
+show_progress = true
+ffi = true
+fs_permissions = [{ access = "read-write", path = "./" }]
+
+[rpc_endpoints]
+local = "http://127.0.0.1:8545/"
+sepolia = "${RPC_URL_SEPOLIA}"
+
+[fuzz]
+runs = 512
+
+[profile.ci.fuzz]
+runs = 1024
+
+[fmt]
+multiline_func_header = 'params_first'
+contract_new_lines = true
+line_length = 110
+int_types = 'long'
+quote_style = 'double'
+number_underscore = 'thousands'
+wrap_comments = true
