--- a/methods/Cargo.toml
+++ b/methods/Cargo.toml
@@ -18,5 +18,7 @@ alloy-sol-types = { workspace = true }
 risc0-zkvm = { workspace = true, features = ["client"] }
 
 [dependencies]
+common = { path = "./common" }
 ipfs-unixfs = "0.2.0"
 risc0-steel = "0.11.1"
+json = "0.12"
