--- a/methods/common/Cargo.toml
+++ b/methods/common/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 cid = { default-features = false, version = "0.5" }
-ipfs-unixfs = "0.2.0"
+ipfs-unixfs = { version = "0.2.0", default-features = false }
+serde = { version = "1.0", features = ["derive"] }
