--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -7,12 +7,22 @@ edition = "2021"
 name = "is-even"
 path = "src/bin/is_even.rs"
 
+[[bin]]
+name = "build-team"
+path = "src/bin/build_team.rs"
+
 [workspace]
 
 [dependencies]
-alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
+common = { path = "../common" }
+alloy-primitives = { version = "0.6", default-features = false, features = [
+    "rlp",
+    "serde",
+    "std",
+] }
 alloy-sol-types = { version = "0.6" }
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
+json = "0.12"
 
 [profile.release]
 lto = "thin"
