--- a/next/package.json
+++ b/next/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "5.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.2",
     "lucide-react": "^0.427.0",
     "next": "14.2.4",
     "react": "^18.3.1",
@@ -21,7 +22,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "latest",
-    "wagmi": "latest"
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
