--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "5.45.1",
     "class-variance-authority": "^0.7.0",
@@ -25,8 +26,8 @@
     "wagmi": "^2.12.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
+    "@types/node": "20.14.15",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0",
     "@wagmi/cli": "latest",
     "autoprefixer": "^10.4.20",
@@ -37,7 +38,7 @@
     "postcss": "^8.4.41",
     "supports-color": "^9.4.0",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5.4.5",
+    "typescript": "5.5.4",
     "utf-8-validate": "^5.0.2"
   }
 }
