--- a/methods/Cargo.toml
+++ b/methods/Cargo.toml
@@ -22,3 +22,4 @@ common = { path = "./common" }
 ipfs-unixfs = "0.2.0"
 risc0-steel = "0.11.1"
 json = "0.12"
+# serde = { version = "1.0", default-features = true, features = ["derive"] }
