--- a/next/package.json
+++ b/next/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@shadcn/ui": "^0.0.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "5.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eth-crypto": "^2.6.0",
     "ethers": "^6.13.2",
     "lucide-react": "^0.427.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "secp256k1": "^5.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "latest",
