move player gen to common

--- a/methods/common/Cargo.toml
+++ b/methods/common/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 cid = { default-features = false, version = "0.5" }
 ipfs-unixfs = { version = "0.2.0", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
+sha2 = "0.10.8"
 json = "0.12"
 array-init = "2.1.0"
