fulfill order functions

--- a/script/config.toml
+++ b/script/config.toml
@@ -1,4 +1,4 @@
-[profile.mainnet] 
+[profile.mainnet]
 # RISC Zero Verifier contract deployed on mainnet (see https://dev.risczero.com/api/blockchain-integration/contracts/verifier#deployed-verifiers)
 chainId = 1
 riscZeroVerifierAddress = "0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319"
@@ -7,8 +7,10 @@ riscZeroVerifierAddress = "0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319"
 # RISC Zero Verifier contract deployed on sepolia (see https://dev.risczero.com/api/blockchain-integration/contracts/verifier#deployed-verifiers)
 chainId = 11155111
 riscZeroVerifierAddress = "0x925d8331ddc0a1F0d96E68CF073DFE1d92b69187"
+fulfillerAddress = "0xFF384A7f31c674B1E6119087fD4F30A333335d4f"
 
 # You can add additional profiles here
-# [profile.custom]
-# chainId = 11155111
+[profile.local]
+chainId = 31337
+fulfillerAddress = "0xFF384A7f31c674B1E6119087fD4F30A333335d4f"
 # riscZeroVerifierAddress =
