chore: Add @radix-ui/react-dialog and @radix-ui/react-slot dependencies, update title and description in RootLayout, and add Navbar component in RootLayout

--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "5.45.1",
