--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -12,6 +12,7 @@ name = "listener"
 path = "src/bin/listener.rs"
 
 [dependencies]
+common = { path = "../methods/common" }
 alloy = { version = "0.2.1", features = ["full"] }
 alloy-primitives = { workspace = true }
 alloy-sol-types = { workspace = true }
@@ -24,3 +25,4 @@ methods = { workspace = true }
 risc0-ethereum-contracts = { workspace = true }
 risc0-zkvm = { workspace = true, features = ["client"] }
 tokio = { version = "1.35", features = ["full"] }
+rand = "0.8.5"
