--- a/script/config.toml
+++ b/script/config.toml
@@ -8,6 +8,7 @@ riscZeroVerifierAddress = "0x8EaB2D97Dfce405A1692a21b3ff3A172d593D319"
 chainId = 11155111
 riscZeroVerifierAddress = "0x925d8331ddc0a1F0d96E68CF073DFE1d92b69187"
 fulfillerAddress = "0xFF384A7f31c674B1E6119087fD4F30A333335d4f"
+playersAddress = "0xfAa746C91B8704BF52ba0aF84ded324fAEf37A7c"
 
 # You can add additional profiles here
 [profile.local]
