--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/build_team.rs"
 
 [dependencies]
 common = { path = "../common" }
+cid = { default-features = true, version = "0.11.1" }
 alloy-primitives = { version = "0.6", default-features = false, features = [
     "rlp",
     "serde",
